--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,10 @@ project('tetris', 'c',
 raylib = dependency('raylib', version: '>=4.5.0')
 
 src = ['src/main.c', 'src/tetris.c']
-
 exe = executable('tetris', sources: src, dependencies: raylib)
 
-test('basic', exe)
+check = dependency('check', version: '>=0.15.2')
+
+testSrc = ['test/main.c']
+testExe = executable('tests', sources: testSrc, dependencies: check)
+test('tests', testExe)
